# gReLU

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE.txt  MANIFEST.in  MEMORY.md  README.md  TROUBLESHOOTING_ISM.md  activate.sh  alphagenome.md  alphagenome_codebase_notes.md  arch.md  authors.html  benchmark_alphagenome_vs_enformer.py  changelog.html  compare_pretrained_inference.py  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  run_alphagenome_inference.py  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  tox.ini  tutorial_1_borzoi_vs_alphagenome.py  tutorial_1_comparison_results.txt  (+3 more)
.codeboarding/: Core & Resource Utilities.md  Data Management & Preparation.md  Model Analysis & Visualization.md  Model Architectures.md  Model Training & Prediction.md  Neural Network Building Blocks.md  Sequence Design & Optimization.md  on_boarding.md
.doctrees/: index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/grelu/: index.doctree
.doctrees/tutorials/: 1_inference.doctree  2_finetune.doctree  3_train.doctree  4_design.doctree  5_variant.doctree  6_model_zoo.doctree  7_custom_models.doctree  7_simulations.doctree  8_custom_models.doctree
.github/workflows/: pypi-publish.yml  pypi-test.yml
_build/: .buildinfo  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  sitemap.xml
_build/.doctrees/: index.doctree
_build/.doctrees/autoapi/: index.doctree
_build/.doctrees/tutorials/: 1_inference.doctree  2_finetune.doctree  3_train.doctree  4_design.doctree  5_variant.doctree  6_model_zoo.doctree  7_simulations.doctree  8_custom_models.doctree
_build/_sources/tutorials/: 2_finetune.ipynb  3_train.ipynb  6_model_zoo.ipynb  8_custom_models.ipynb
_build/_static/: documentation_options.js
_build/autoapi/: index.html
_build/autoapi/grelu/: index.html
_build/tutorials/: 1_inference.html  2_finetune.html  3_train.html  4_design.html  5_variant.html  6_model_zoo.html  7_simulations.html  8_custom_models.html
_sources/: authors.rst  changelog.rst  index.md  readme.rst
_sources/autoapi/: index.rst
_sources/autoapi/grelu/: index.rst
_sources/tutorials/: 1_inference.ipynb  2_finetune.ipynb  3_train.ipynb  4_design.ipynb  5_variant.ipynb  6_model_zoo.ipynb
_static/: documentation_options.js  mystnb.2b8b0da6202b741f8bcba8c084c1670ccf309542bf660ceac1099fca6061a348.css
autoapi/: index.html
autoapi/grelu/: index.html
autoapi/grelu/data/: index.html
autoapi/grelu/design/: index.html
autoapi/grelu/interpret/: index.html
autoapi/grelu/io/: index.html
docs/: arch.md  conf.py  index.md  license.rst  requirements.txt
docs/.ipynb_checkpoints/: conf-checkpoint.py
docs/_static/: switcher.json
docs/plans/: 2026-03-03-deprecation-messages-design.md  2026-03-03-deprecation-messages.md  2026-03-03-huggingface-migration-design.md  2026-03-03-huggingface-migration.md
docs/tutorials/: 1_inference.ipynb  2_finetune.ipynb  3_train.ipynb  4_design.ipynb  5_variant.ipynb  6_model_zoo.ipynb  7_simulations.ipynb  7_tracks.ipynb  8_custom_models.ipynb  8_new_models.ipynb
jupyter_execute/tutorials/: 1_inference.ipynb  2_finetune.ipynb  3_train.ipynb  4_design.ipynb  5_variant.ipynb  6_model_zoo.ipynb  7_simulations.ipynb  8_custom_models.ipynb
scripts/: bench_ag_borzoi.py
src/gReLU.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/grelu/: __init__.py  design.py  utils.py  variant.py  visualize.py
tests/: conftest.py  test_alphagenome_inference.py  test_augment.py  test_bench_ag_borzoi.py  test_blocks.py  test_data_utils.py  test_dataset.py  test_design.py  test_heads.py  test_interpret.py  test_io.py  test_layers.py  test_lightning.py  test_models.py  test_positional.py  test_preprocess.py  test_resources.py  test_resources_hf.py  test_sequence.py  test_transforms.py  test_utils.py  test_variant.py
tests/files/: test.bed  test.bw  test.fa  test.fa.bgz  test.fa.bgz.fai  test.fa.fai  test.fa.sizes  test.meme  test_genome.fa  test_genome.fa.fai  test_genome.fa.sizes  test_variants.txt
tutorials/: 1_inference.html  2_finetune.html  3_train.html  4_design.html  5_variant.html  6_model_zoo.html  7_custom_models.html  7_simulations.html  8_custom_models.html
(+325 files in other folders)
