# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = gReLU
description = gReLU is a python library to train, interpret, and apply deep learning models to DNA sequences
author = lal.avantika,eraslan.gokcen
author_email = lal.avantika@gene.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://code.roche.com/gred-rb-ai-ml-regulatory-genomics/grelu

# Add here related links, for example:
project_urls =
    Documentation = https://code.roche.com/gred-rb-ai-ml-regulatory-genomics/grelu
    Source = https://code.roche.com/gred-rb-ai-ml-regulatory-genomics/grelu
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata
    importlib-resources
    wandb >= 0.14
    numpy
    pandas
    seaborn
    matplotlib
    plotnine >= 0.8
    anndata >= 0.8
    scikit-learn
    torch >= 2.0
    pytorch-lightning >= 2.0
    torchmetrics >= 1.1
    modisco-lite >= 2.2.1
    biopython
    enformer-pytorch
    genomepy
    bioframe >= 0.4
    captum == 0.5.0
    logomaker >= 0.8
    pyBigWig
    ledidi
    tangermeme >= 0.4.0,< 0.5.0
    pygenomeviz <= 0.4.4
    statsmodels >=0.11.1
    pyjaspar >=3.0


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install grelu[PDF]` like:
# PDF = ReportLab; RXP
optional =
    bgzip

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = grelu.module:function
# For example:
# console_scripts =
#     fibonacci = grelu.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov grelu --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.4.1
package = grelu
extensions =
    gitlab
    no_skeleton
    pre_commit
